Fix header responsiveness on tablet

--- a/css/styles.css
+++ b/css/styles.css
@@ -635,7 +635,7 @@ a.dotted-link:hover {
   margin-right: 0;
 }
 
-@media (max-width: 767.98px) {
+@media (max-width: 991px) {
   .header {
     text-align: center;
   }
